--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -70,8 +70,8 @@ jobs:
         name: codecov-${{ matrix.os }}-py${{ matrix.python-version }}
 
     - name: Docs
-      uses: actions/checkout@v1
-      uses: ammaraskar/sphinx-action@master
+    - uses: actions/checkout@v1
+    - uses: ammaraskar/sphinx-action@master
       with:
         docs-folder: "docs/"
 
