--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -69,7 +69,11 @@ jobs:
         flags: unittests
         name: codecov-${{ matrix.os }}-py${{ matrix.python-version }}
 
-    - name: Docs
+  docs:
+
+    runs-on: ubuntu-latest
+
+    steps:
     - uses: actions/checkout@v1
     - uses: ammaraskar/sphinx-action@master
       with:
