--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -73,11 +73,8 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v1
-    - uses: ammaraskar/sphinx-action@master
-      with:
-        docs-folder: "docs/"
+    - name: Sphinx Build
+      uses: ammaraskar/sphinx-action@0.4
 
     - name: Commit documentation changes
       run: |
